# create_demo_2026

./: .gitignore  CMakeLists.txt  package.xml
launch/: launch_stuff.launch.py
scripts/: sinusoidal_pose_publisher.py
src/: human_to_robot_handover.cpp  human_to_robot_handover_v2.cpp  test_eigen.cpp
